# libmbd

./: .exrc-mpi  .exrc-serial  .flake8  .fprettify.rc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Makefile  Makefile.build  Makefile.in  Pipfile  README.md  RELEASING.md  build.py  cffi_build.py  codecov.yml  configure.py  example.system.mk  integralPack.f90  io.f90  main.f90  matrix_utils.f90  mbd.f90  mbd_e1.f90  mbd_helper.f90  mbd_interface.f90  mbd_math.f90  ofunctions.f90  pymbd.py  pymbd_build.py  pyproject.toml  reproduce_issue_72.py  requirements-dev.txt  requirements.txt  results.json  setup.cfg  setup.py  (+2 more)
.claude/hooks/: session-start.sh
.conda/: build.sh  conda_build_config.yaml  meta.yaml
.github/workflows/: build-dist.yaml  copilot-setup-steps.yml  doc-deploy-trigger.yaml  doc-deploy.yaml  doc-deploy.yml  doc-preview.yaml  doc.yaml  install.yaml  lint.yaml  publish.yaml  release.yaml  tests.yaml
.travis/: after-success.sh  anaconda.sh  env.sh  install.sh  script.sh
cmake/: LibmbdVersion.cmake  fortran_flags_override.cmake  libMBDVersion.cmake
devtools/: CHANGELOG.md.in  changelog.py  changelog.sh  coverage-summary.py  gen-fortran-coverage.sh  generate-vdw-params.py  issue-76-notes.md  reproduce-issue-76.sh  source-dist.sh
doc/: anisotropic-gaussians.md  api.rst  conf.py  densities.rst  examples.rst  index.rst  libmbd.md  mbd-forces.md  n2_example.py  playground.ipynb  tweaks.css
docs/: Doxyfile  api.rst  conf.py  density-coulomb.md  fortran-c-api.rst  index.rst  libmbd.md  mbd-forces.md  tweaks.css
example/: process.py
examples/: advanced.ipynb  basic.ipynb
mbd/: __init__.py  free_atoms.json  mbd.py  tests.py  vdw_param.py
mbd/tests/: test_mbd.py
pymbd/: __init__.py  conftest.py  fortran.py  pymbd.py  pymbd2.py  tensorflow.py  test_pymbd.py  tests.py  utils.py  vdw-params.csv  vdw_param.py
src/: CMakeLists.txt  Makefile  constant.f90  defaults.h  integralPack.f90  mbd.F90  mbd.f90  mbd.h  mbd_api.f90  mbd_api_tests.F90  mbd_api_tests.f90  mbd_blacs.f90  mbd_build_flags.in.f90  mbd_c_api.F90  mbd_c_api.f90  mbd_calc.F90  mbd_clock.f90  mbd_common.f90  mbd_constants.f90  mbd_core.F90  mbd_coulomb.f90  mbd_damping.F90  mbd_damping.f90  mbd_damping_type.f90  mbd_defaults.f90  mbd_density.f90  mbd_dipole.F90  mbd_e1.f90  mbd_elsi.F90  mbd_formulas.f90  mbd_geom.F90  mbd_gradients.f90  mbd_gradients_type.f90  mbd_hamiltonian.F90  mbd_helper.f90  mbd_helper_dev.f90  mbd_interface.f90  mbd_lapack.f90  mbd_linalg.F90  mbd_linalg.f90  (+29 more)
src/pymbd/: __init__.py  __main__.py  benchmark.py  fortran.py  pymbd.py  tensorflow.py  vdw-params.SOURCES.md  vdw-params.csv  vdw-params.csv.license
src/pymbd/ase/: README.md  __init__.py  dispcorr.py  mbd.py
tests/: CMakeLists.txt  Makefile  collect-mbd-tests.py  compare.py  conftest.py  mbd_api_tests.F90  mbd_grad_test_cases.F90  mbd_grad_test_cases.f90  mbd_grad_tests.F90  mbd_unit_test_cases.f90  mbd_unit_tests.F90  test_ase.py  test_benchmark.py  test_fortran.py  test_main.py  test_pymbd.py  test_python.py  tests.ipynb
tests/argon-chain/: input.json
tests/argon-dimer/: input.json  ref.json  test.py
tests/argon-double-chain/: test.py
tests/ase/: test_mbdcalc.py  test_mbdcalc_gradients.py  test_mbdcalc_lattgrad.py  test_mbdcalc_ts.py
tests/bi-graphene/: input.json
tests/gas-phase-periodic/: input.json
tests/graphene/: input.json
utils/: Makefile.in  build-mbd-ext.py  gen_fortran_vdw_params.py  generate-build.py  generate-vdw-params.py
