[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning", "cffi", "setuptools"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pymbd"
version = "0.0.0"
description = "Many-body dispersion library"
authors = ["Jan Hermann <dev@jan.hermann.name>"]
readme = "README.md"
packages = [{ include = "pymbd", from = "src" }]
repository = "https://github.com/libmbd/libmbd"
documentation = "https://libmbd.nablapsi.science/pymbd"
license = "MPL-2.0"
include = [
    { path = "src/mbd.h" },
    { path = "src/pymbd/*.so", format = "wheel" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.build]
script = "cffi_build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.6"
numpy = ">=1.20"
cffi = ">=1"
pytest = { version = "*", optional = true }
mpi4py = { version = "^3 || ^4", optional = true }

[tool.poetry.extras]
mpi = ["mpi4py"]
test = ["pytest"]

[tool.poetry.dev-dependencies]
ruff = ">=0.10"
fprettify = { git = "https://github.com/jhrmnn/fprettify.git", rev = "fix-config-search" }

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
pattern = '^(?P<base>\d+\.\d+\.\d+)$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "N", "B", "C4", "C90", "Q", "I", "D"]
ignore = [
    "E501",
    "E741",
    "N802",
    "N803",
    "N806",
    "N812",
    "B905",
    "D100",
    "D104",
    "D105",
    "D107",
    "D202",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
no-lines-before = ["typing"]
section-order = [
    "future",
    "standard-library",
    "typing",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
typing = ["typing", "typing_extensions"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"devtools/**" = ["D"]
"doc/**" = ["D"]
"cffi_build.py" = ["D"]

[tool.ruff.format]
quote-style = "preserve"

[tool.coverage.run]
branch = true
source = ["pymbd"]
parallel = true
omit = ["*/pymbd/tensorflow.py", "*/pymbd/benchmark.py"]

# Map the installed (non-editable) package back onto the source tree so the
# combined report and coverage.xml use src/pymbd/... paths regardless of how
# pyMBD was installed.
[tool.coverage.paths]
source = ["src/pymbd", "*/site-packages/pymbd", "*/pymbd"]
