[metadata]
name = pymbd
version = 0.6.0
description = Many-body dispersion library
long_description = file: README.md
long_description_content_type = text/markdown
author = Jan Hermann
author_email = dev@jan.hermann.name
url = https://github.com/jhrmnn/libmbd
license = MPL 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Fortran
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
packages = pymbd
install_requires =
    cffi
    numpy <=1.15
    scipy
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.package_data]
pymbd = vdw-params.csv

[options.extras_require]
mpi = mpi4py

[flake8]
max-complexity = 12
max-line-length = 80
ignore = E501,W503,E741,N802,N803,N806
select = C,E,F,N,W,B,B9,Q0

[isort]
multi_line_output = 3
include_trailing_comma = 1
line_length = 85
sections = FUTURE,STDLIB,TYPING,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_typing = typing, typing_extensions
no_lines_before = TYPING

[pydocstyle]
add-ignore = D100,D104,D105,D107,D202
ignore-decorators = wraps

[tool:pytest]
filterwarnings =
    ignore::PendingDeprecationWarning

[tox:tox]
minversion = 3.3
envlist = any-serial

[testenv]
skip_install = true
whitelist_externals =
    mpirun
    env
setenv =
    serial,mpi-build: BLDDIR = build
    mpi-!build: BLDDIR = build-mpi
    serial-gfortran49: BLDDIR = build-gfortran49
    serial-gfortran5: BLDDIR = build-gfortran5
    nodes1: NODES = 1
    nodes2: NODES = 2
    coverage: COVPREFIX = coverage run --source=pymbd --branch -m
    PYTESTCMD = pytest -v --durations=3 pymbd
deps =
    cffi
    numpy <=1.15
    pytest
    scipy
    mpi: mpi4py
    codecov: coverage
    codecov: codecov
# TODO till https://github.com/tox-dev/tox-conda/issues/20 is fixed
# conda_deps =
#     cffi
#     numpy =1.15
#     scipy
#     nomkl
commands_pre =
    python setup.py -q build -b{env:BLDDIR} build_ext -i -Isrc -L{env:BLDDIR}/src -R{env:BLDDIR}/src
commands =
    serial: {env:COVPREFIX:} {env:PYTESTCMD}
    mpi: mpirun -n {env:NODES} {env:COVPREFIX:} {env:PYTESTCMD}
    codecov: codecov
envdir =
    any-serial: {toxworkdir}/default
    py27-serial: {toxworkdir}/py27
    py27-mpi: {toxworkdir}/py27-mpi
    py36-serial: {toxworkdir}/py36
    py36-mpi: {toxworkdir}/py36-mpi
    py37-serial: {toxworkdir}/py37
    py37-mpi: {toxworkdir}/py37-mpi
passenv =
    codecov: TOXENV CI TRAVIS TRAVIS_*

[testenv:doc]
whitelist_externals =
    touch
deps =
    sphinx
    git+https://github.com/jhrmnn/ford@7b44574da7ec20f4ab4b1842ec7561de2a601930
commands_pre =
commands =
    ford docs/libmbd.md -o build
    sphinx-build -d "{toxworkdir}/docs_doctree" docs docs/build/pymbd
    touch docs/build/.nojekyll
envdir = {toxworkdir}/{envname}
