[metadata]
name = pymbd
version = 0.8.0
description = Many-body dispersion library
long_description = file: README.md
long_description_content_type = text/markdown
author = Jan Hermann
author_email = dev@jan.hermann.name
url = https://github.com/jhrmnn/libmbd
license = MPL 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Fortran
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
packages = pymbd
install_requires =
    cffi
    numpy <=1.15
    scipy
python_requires = >=3.5

[options.package_data]
pymbd = vdw-params.csv

[options.extras_require]
mpi = mpi4py

[flake8]
max-complexity = 12
max-line-length = 80
ignore = E501,W503,E741,N802,N803,N806
select = C,E,F,N,W,B,B9,Q0

[isort]
multi_line_output = 3
include_trailing_comma = 1
line_length = 85
sections = FUTURE,STDLIB,TYPING,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_typing = typing, typing_extensions
no_lines_before = TYPING

[pydocstyle]
add-ignore = D100,D104,D105,D107,D202
ignore-decorators = wraps

[tool:pytest]
filterwarnings =
    ignore::PendingDeprecationWarning

[tox:tox]
minversion = 3.8
requires = tox_venv >= 1.0.0
envlist = serial

[testenv]
skip_install = true
whitelist_externals =
    mpirun
    env
setenv =
    bdefault: BLDDIR = build/default
    bgfortran49: BLDDIR = build/gfortran49
    bgfortran5: BLDDIR = build/bgfortran5
    bmpi: BLDDIR = build/mpi
    belsi: BLDDIR = build/elsi
    codecov: COVPREFIX = coverage run --source=pymbd --branch -m
    mpi: MPIPREFIX = env OMP_NUM_THREADS=1 mpirun -n {env:MPI_NODES}
deps =
    cffi
    numpy <=1.15
    pytest
    scipy
    mpi: mpi4py
    codecov: coverage
    codecov: codecov
# TODO do not activate until https://github.com/tox-dev/tox-conda/issues/20 is fixed
# conda_deps =
#     cffi
#     numpy =1.15
#     scipy
#     nomkl
commands_pre =
    python setup.py -q build -b{env:BLDDIR:build} build_ext -i -Isrc -L{env:BLDDIR:build}/src -R{env:BLDDIR:build}/src
commands =
    {env:MPIPREFIX:} {env:COVPREFIX:} pytest -v --durations=3 pymbd
    codecov: codecov
envdir =
    serial: {toxworkdir}/serial
    mpi: {toxworkdir}/mpi
passenv =
    codecov: MPI_NODES TOXENV CI TRAVIS TRAVIS_*

[testenv:doc]
whitelist_externals =
    touch
deps =
    sphinx
    git+https://github.com/jhrmnn/ford@7b44574da7ec20f4ab4b1842ec7561de2a601930
commands_pre =
commands =
    ford docs/libmbd.md -o build
    sphinx-build -d "{toxworkdir}/docs_doctree" docs docs/build/pymbd
    touch docs/build/.nojekyll
envdir = {toxworkdir}/{envname}
